Horizontal Scrolling on Mobile screens Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+/* Prevent horizontal scroll globally */
+body, html {
+    overflow-x: hidden;
+  }
+  
+  #root {
+    overflow-x: hidden;
+  }
+  
